# cloudcdn-api-service

./: .gitignore  Makefile
.github/workflows/: test-build-push.yml  ubuntu-lint.yml
cdn-api-app/: Cargo.toml
cdn-api-app/aws-lambda/: Cargo.toml
cdn-api-app/aws-lambda/src/: build_response.rs  get_students.rs  lib.rs  main.rs  parse_request.rs  post_student.rs
cdn-api-app/aws-lambda/tests/: test_simple_crud.rs
cdn-api-app/aws-lambda/tests/common/: getter.rs  poster.rs
cdn-api-app/cloudcdn/: Cargo.toml  README.md
cdn-api-app/cloudcdn/.openapi-generator/: FILES
cdn-api-app/cloudcdn/api/: openapi.yaml
cdn-api-app/cloudcdn/docs/: DistributionUpsert.md  DistributionUpsertAllOf.md  DistributionUpsertRequest.md  distributions_api.md
cdn-api-app/cloudcdn/src/: lib.rs  models.rs
cdn-api-app/cloudcdn/src/lambda/: mod.rs
cdn-api-app/controller/src/: get_one_student_by_id.rs
