[package]
name = "aws-lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.5.0"
tokio = { version = "1", features = ["macros"] }
controller = { package = "controller", path = "../controller" }
#controller = { package = "mock-controller", path = "../../student-app/mock-controller" }
domain = {path = "../domain"}

async-trait = "0.1.24"
swagger = "5.0.2"


jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = "0.8"
hvcg_academics_openapi_student = "0.8.1"
beancloud_cloudresource_openapi_cloudcdn = { path = "../cloudcdn", features = ["lambda"]}
serde_json = "1.0"
chrono = "0.4.19"

[dev-dependencies]
dotenv = "0.15.0"